--- a/ece745_projects/project_benches/proj_1/sim/Makefile
+++ b/ece745_projects/project_benches/proj_1/sim/Makefile
@@ -39,5 +39,4 @@ simulate:
 
 debug_3step: clean compile simulate
 
-debug:
-	qrun -64 -gui -visualizer -onfinish stop -classdebug -uvmcontrol=all -msgmode both -permit_unmatched_virtual_intf -l run.log -f lab1_filelist.f -sv_seed 123456 -msglimit error -msglimitcount 20 -do "set IterationLimit 140000; set NoQuitOnFinish 1; coverage attribute -name TESTNAME -value test_top; coverage save -onexit test_top.ucdb; do wave.do" -debug,livesim -qwavedb=+signal+memory=1024+report+parameter+class+assertion+uvm_schematic+msg+classmemory=1024+statictaskfunc -top top -covermultiuserenv -designfile design.bin 
+debug: clean compile simulate 
